fix: Align color hex case

--- a/app/style/auth/base.less
+++ b/app/style/auth/base.less
@@ -27,7 +27,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: linear-gradient(0deg, #2391D3, #68B3E0);
+  background-image: linear-gradient(0deg, #2391d3, #68b3e0);
 }
 
 .auth-page {
