--- a/app/style/loading-screen.less
+++ b/app/style/loading-screen.less
@@ -21,7 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(0deg, #2391D3, #68B3E0);
+  background-image: linear-gradient(0deg, #2391d3, #68b3e0);
   color: #fff;
   position: absolute;
   height: 100%;
